# shuangguang

./: CMakeLists.txt  GeneralDef.h  demo.cpp  demo.h  demo.ui  ftpsettings.cpp  ftpsettings.h  ftpsettings.ui  hikcontrol.cpp  hikcontrol.h  hikcontrol.ui  main.cpp  mylabel.cpp  mylabel.h  plugin.h  plugininterface.h
hik_control/: plugin.cpp  plugin.h  plugininterface.h
img/: resources.qrc
ir_visible_light/: plugin.cpp  plugin.h
sdk64/opencv/lib/: opencv_aruco454.lib  opencv_barcode454.lib  opencv_bgsegm454.lib  opencv_bioinspired454.lib  opencv_calib3d454.lib  opencv_ccalib454.lib  opencv_core454.lib  opencv_datasets454.lib  opencv_dnn454.lib  opencv_dnn_objdetect454.lib  opencv_dnn_superres454.lib  opencv_dpm454.lib  opencv_face454.lib  opencv_features2d454.lib  opencv_flann454.lib  opencv_fuzzy454.lib  opencv_gapi454.lib  opencv_hfs454.lib  opencv_highgui454.lib  opencv_img_hash454.lib  opencv_imgcodecs454.lib  opencv_imgproc454.lib  opencv_intensity_transform454.lib  opencv_line_descriptor454.lib  opencv_mcc454.lib  opencv_ml454.lib  opencv_objdetect454.lib  opencv_optflow454.lib  opencv_phase_unwrapping454.lib  opencv_photo454.lib  opencv_plot454.lib  opencv_quality454.lib  opencv_rapid454.lib  opencv_reg454.lib  opencv_rgbd454.lib  opencv_saliency454.lib  opencv_shape454.lib  opencv_stereo454.lib  opencv_stitching454.lib  opencv_structured_light454.lib  (+12 more)
